<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">SEQ1 Sessions</string>
    <string name="title_activity_main">SEQ1 Sessions</string>
    <string name="package_name">net.seq1.sessions</string>
    <string name="custom_url_scheme">net.seq1.sessions</string>

    <!-- Home-screen App Shortcuts (res/xml/shortcuts.xml) -->
    <string name="shortcut_resume_short">Resume</string>
    <string name="shortcut_resume_long">Resume last session</string>
    <string name="shortcut_voice_short">Voice</string>
    <string name="shortcut_voice_long">Launch with voice</string>
    <string name="shortcut_session_short">New session</string>
    <string name="shortcut_session_long">Launch session</string>
    <string name="shortcut_record_short">Record</string>
    <string name="shortcut_record_long">Start recording</string>
</resources>
